# bitbake-svn

bitbake/trunk/bitbake-data/: ChangeLog
bitbake/trunk/bitbake-data/include/: bitbake-data.h
bitbake/trunk/bitbake-data/tests/: Makefile.am  check_bitbake_data.c
branches/bitbake-1.4/: DO_NOT_USE_THIS_WE_HAVE_SWITCHED_TO_GIT
branches/bitbake-data-local/: Makefile.am  TODO  configure.ac
branches/bitbake-data-local/src/: backend-sqlite3.c
branches/bitbake-data-local/tests/: check_bitbake_data.c
oe/trunk/openembedded/: .mt-attrs  monotone_0.22-0.1_i386.deb
oe/trunk/openembedded/MT/: debug  options  revision
trunk/bitbake-data/: ChangeLog  Makefile.am  TODO  configure.ac
trunk/bitbake-data/doc/: test_scoped_lookups.sql
trunk/bitbake-data/doc/doxygen/: Makefile.am
trunk/bitbake-data/include/: bitbake-data.h
trunk/bitbake-data/src/: Makefile.am  backend-sqlite3.c
trunk/bitbake-data/tests/: check_bitbake_data.c
trunk/bitbake-ng/: ChangeLog  Makefile.am  README  acinclude.m4  bitbake-0.0.pc.in  configure.ac
trunk/bitbake-ng/config/: version.m4
trunk/bitbake-ng/doc/: Doxyfile  Makefile.am  doxygen.cfg
trunk/bitbake-ng/doc/design_spec/: Makefile  design_spec.xml
trunk/bitbake-ng/include/: bitbake.h  foo.h
trunk/bitbake-ng/include/bitbake/: common.h  data-private.h  data.h
trunk/bitbake-ng/m4/internal/: visibility.m4
trunk/bitbake-ng/src/: Makefile.am  binreloc.c  data.c  main.c  main.h
trunk/bitbake-ng/test/: Makefile.am  check_bitbake_data.c
trunk/bitbake-ng/tests/: Makefile.am  check_bitbake_data.c
trunk/bitbake-parser/: Makefile  README  TODO  ast-test.py  ast.py  ast_defines.py  bitbake_token.h  bitbakec.pyx  bitbakeparser.y  bitbakescanner.l  data_visitor.py  evaluator_data.py  kill-parser.py  lexer.h  lexerc.h  nodecache.py  parse-all.py  parse-one.py
trunk/bitbake-parser/standalone/: Makefile  bitbake_token.h  bitbakeparser.y  bitbakescanner.l  lemon  main.cxx
trunk/bitbake-tests/: README
trunk/bitbake-tests/tests/: run-tests.py
trunk/bitbake-tests/tests/bblib/: __init__.py  bblibtest.py
trunk/bitbake-tests/tests/bugs/: __init__.py  regtests.py
trunk/bitbake-tests/tests/bugs/bug_68/conf/: bitbake.conf
trunk/bitbake-tests/tests/bugs/bug_937/: README  fix-mind.bb
trunk/bitbake-tests/tests/bugs/bug_937/classes/: base.bbclass
trunk/bitbake-tests/tests/bugs/bug_937/conf/: bitbake.conf  local.conf
trunk/bitbake-tests/tests/bugs/bug_937/conf/machine/: c7x0.conf
trunk/bitbake-tests/tests/cow/: __init__.py  cowtest.py
trunk/bitbake-tests/tests/data/: __init__.py  datatest.py
trunk/bitbake-tests/tests/modules/: __init__.py  moduletest.py
trunk/bitbake-tests/tests/parse/: __init__.py  bblibtest.py  parsetest.py
trunk/bitbake-tests/tests/parse/input/: add_handler_wrong_1.bbclass  anonfunc.bb  anonfunc_2.bb  assign.bb  colon.bb  cond.bb  conditional-append.bb  conditional-metadata.bb  conf_inc.conf  dot.bb  expand_test.bb  flagtest.bb  include_nonexistant.conf  plus.bb  python-expansion.bb  task.bbclass  task_broken_1.bbclass  task_broken_2.bbclass
trunk/bitbake-tests/tests/parse/input/classes/: add_handler.bbclass  add_handler_wrong_2.bbclass
trunk/bitbake-tests/tests/parse/input/conf/: conf_inc.inc  include.conf  require.conf  require_nonexistant.conf  some.conf
trunk/bitbake_qa/classes/: base.bbclass
trunk/bitbake_qa/conf/: bitbake.conf  testrun.conf.sample
trunk/bitbake_qa/doc/: README
trunk/bitbake_qa/doc_checker/: doc_checker.py
trunk/bitbake_qa/lib/bittest/: __init__.py  testreport_html.py  testreport_text.py  testreport_tinder.py  testresult.py  teststore_array.py
trunk/bitbake_qa/modules/content_checker/: content_checker.py
trunk/bitbake_qa/modules/depends_checker/: depends.py
trunk/bitbake_qa/modules/lint_checker/: __init__.py
trunk/bitbake_qa/source_checker/: source_checker.py
trunk/libbitbake-data/: ChangeLog  Makefile.am  configure.ac
trunk/libbitbake-data/doc/: Makefile.am  REQUIREMENTS
trunk/libbitbake-data/src/: Makefile.am  backend-sqlite3.c
